Add support/channel media and support bot

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ V2RAY_URL=https://example.com/v2ray
 PRIVACY_EMAIL=support@example.com
 DEFAULT_KEY=vless://REPLACE_ME
 SUBSCRIPTION_URL=https://example.com/sub/REPLACE_ME
+RENEW_URL=
+ADMIN_IDS=
+REMINDER_INTERVAL_MINUTES=60
+SUPPORT_BOT_TOKEN=
+SUPPORT_ADMIN_CHAT_ID=
+SUPPORT_ADMIN_IDS=
