Add 3x-ui API integration scaffolding

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,15 @@ REMINDER_INTERVAL_MINUTES=60
 SUPPORT_BOT_TOKEN=
 SUPPORT_ADMIN_CHAT_ID=
 SUPPORT_ADMIN_IDS=
+XUI_BASE_URL=
+XUI_USERNAME=
+XUI_PASSWORD=
+XUI_API_PATH=/panel/api
+XUI_INBOUND_ID=
+XUI_FLOW=
+XUI_TOTAL_GB=0
+XUI_LIMIT_IP=0
+XUI_PUBLIC_HOST=
+XUI_PUBLIC_PORT=
+XUI_SUB_BASE_URL=
+XUI_SSL_VERIFY=true
