Improve start flow and ops tooling

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ CHANNEL=@GetniusVPN
 BASE_URL=https://example.com
 ONE_CLICK_URL=https://example.com/one-click
 V2RAY_URL=https://example.com/v2ray
+CHECK_URL=https://check-host.net/check-ping
 PRIVACY_EMAIL=support@example.com
 DEFAULT_KEY=vless://REPLACE_ME
 SUBSCRIPTION_URL=https://example.com/sub/REPLACE_ME
@@ -19,6 +20,7 @@ XUI_BASE_URL=
 XUI_USERNAME=
 XUI_PASSWORD=
 XUI_API_PATH=/panel/api
+XUI_INBOUND_IDS=
 XUI_INBOUND_ID=
 XUI_FLOW=
 XUI_TOTAL_GB=0
@@ -27,6 +29,13 @@ XUI_PUBLIC_HOST=
 XUI_PUBLIC_PORT=
 XUI_SUB_BASE_URL=
 XUI_SSL_VERIFY=true
+XUI_TIMEOUT_SECONDS=10
 WEBHOOK_TOKEN=
 WEBHOOK_BIND=127.0.0.1
 WEBHOOK_PORT=8080
+HEALTHCHECK_COOLDOWN_SECONDS=1800
+HEALTHCHECK_DISK_FREE_GB=1
+HEALTHCHECK_MEM_FREE_MB=200
+HEALTHCHECK_LOAD_1=2.0
+HEALTHCHECK_SERVICES=x-ui.service,getnius-bot.service,getnius-support.service,getnius-webhook.service
+UPDATECHECK_COOLDOWN_HOURS=24
