Update default channel link

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ BOT_TOKEN=replace_me
 BRAND_NAME=GetniusVPN
 BOT_USERNAME=@GetniusVPN_bot
 SUPPORT_BOT=@GetniusSupport_bot
-CHANNEL=@GetniusVPN
+CHANNEL=https://t.me/genialvpn
 BASE_URL=https://example.com
 ONE_CLICK_URL=https://example.com/one-click
 V2RAY_URL=https://example.com/v2ray
