Update branding defaults

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 BOT_TOKEN=replace_me
-BRAND_NAME=GetniusVPN
-BOT_USERNAME=@GetniusVPN_bot
+BRAND_NAME=Lagom VPN Pro
+BOT_USERNAME=@lagvpnbot
 SUPPORT_BOT=@GetniusSupport_bot
 CHANNEL=https://t.me/genialvpn
 BASE_URL=https://example.com
