Update support welcome and add app links

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ BASE_URL=https://example.com
 ONE_CLICK_URL=https://example.com/one-click
 V2RAY_URL=https://example.com/v2ray
 CHECK_URL=https://check-host.net/check-ping
+HAPP_URL=https://play.google.com/store/apps/details?id=com.happproxy
+V2RAYTUN_URL=https://play.google.com/store/apps/details?id=com.v2raytun.android
 PRIVACY_EMAIL=support@example.com
 DEFAULT_KEY=vless://REPLACE_ME
 SUBSCRIPTION_URL=https://example.com/sub/REPLACE_ME
