Add device-specific client links

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ V2RAY_URL=https://example.com/v2ray
 CHECK_URL=https://check-host.net/check-ping
 HAPP_URL=https://play.google.com/store/apps/details?id=com.happproxy
 V2RAYTUN_URL=https://play.google.com/store/apps/details?id=com.v2raytun.android
+V2RAYN_URL=https://github.com/2dust/v2rayN/releases
+IOS_V2RAYTUN_URL=https://apps.apple.com/us/app/v2raytun/id6476628951
+ROUTER_URL=https://openwrt.org/
 PRIVACY_EMAIL=support@example.com
 DEFAULT_KEY=vless://REPLACE_ME
 SUBSCRIPTION_URL=https://example.com/sub/REPLACE_ME
