--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ CHECK_URL=https://check-host.net/check-ping
 HAPP_URL=https://play.google.com/store/apps/details?id=com.happproxy
 V2RAYTUN_URL=https://play.google.com/store/apps/details?id=com.v2raytun.android
 V2RAYN_URL=https://github.com/2dust/v2rayN/releases
+V2RAYA_URL=https://github.com/v2rayA/v2rayA
 IOS_V2RAYTUN_URL=https://apps.apple.com/us/app/v2raytun/id6476628951
 ROUTER_URL=https://openwrt.org/
 PRIVACY_EMAIL=support@example.com
