Align install flows and add deeplink support

--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,20 @@ BOT_USERNAME=@lagvpnbot
 SUPPORT_BOT=@GetniusSupport_bot
 CHANNEL=https://t.me/genialvpn
 BASE_URL=https://example.com
+DEEPLINK_REDIRECT_URL=
 ONE_CLICK_URL=https://example.com/one-click
 V2RAY_URL=https://example.com/v2ray
 CHECK_URL=https://check-host.net/check-ping
 HAPP_URL=https://play.google.com/store/apps/details?id=com.happproxy
+HAPP_APK_URL=https://happ.info/
+HAPP_IOS_URL=https://apps.apple.com/ru/app/happ-proxy-utility-plus/id6746188973
+HAPP_IOS_ALT_URL=https://apps.apple.com/us/app/happ-proxy-utility/id6504287215
 V2RAYTUN_URL=https://play.google.com/store/apps/details?id=com.v2raytun.android
+FLCLASH_URL=https://flclash.cc/
 V2RAYN_URL=https://github.com/2dust/v2rayN/releases
 V2RAYA_URL=https://github.com/v2rayA/v2rayA
 IOS_V2RAYTUN_URL=https://apps.apple.com/us/app/v2raytun/id6476628951
+SINGBOX_URL=https://sing-box.sagernet.org/clients/apple/
 ROUTER_URL=https://openwrt.org/
 PRIVACY_EMAIL=support@example.com
 DEFAULT_KEY=vless://REPLACE_ME
